# kanastra-hiring-challenge

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_api.py  run_worker.py
app/: constants.py  main.py
app/exceptions/: application_exception.py  file_wrong_exception.py
app/integrations/bill_pdf_generator/: bill_pdf_generator.py
app/integrations/email_sender/: email_sender_abc.py  smtp_email_sender.py
app/models/: bill.py
app/providers/: app_providers.py
app/queue/: RabbitMQQueue.py  queue_abc.py
app/repositories/: bill_repository.py
app/routes/: app_router.py
app/routes/v1/: v1_router.py
app/routes/v1/upload/: upload_router.py
app/services/v1/bill/: bill_service.py
app/services/v1/file_processor/: file_processor_service.py
app/tasks/: file_processor_task.py
tests/fixture/: bill_factory.py
tests/integration/upload_router/: upload_router_test.py
tests/unit/services/v1/bill/: bill_service_test.py
tests/unit/tasks/: file_processor_task_test.py
